# visualization.goom

./: .clang-format  .clang-tidy  CMakeLists.txt
lib/: CMakeLists.txt
lib/cereal/include/cereal/: access.hpp  cereal.hpp  macros.hpp  specialize.hpp  version.hpp
lib/cereal/include/cereal/archives/: adapters.hpp  binary.hpp  json.hpp  portable_binary.hpp  xml.hpp
lib/cereal/include/cereal/details/: helpers.hpp  polymorphic_impl.hpp  polymorphic_impl_fwd.hpp  static_object.hpp  traits.hpp  util.hpp
lib/cereal/include/cereal/types/: array.hpp  atomic.hpp  base_class.hpp  bitset.hpp  boost_variant.hpp  chrono.hpp  common.hpp  complex.hpp  deque.hpp  forward_list.hpp  functional.hpp  list.hpp  map.hpp  memory.hpp  optional.hpp  polymorphic.hpp  queue.hpp  set.hpp  stack.hpp  string.hpp  tuple.hpp  unordered_map.hpp  unordered_set.hpp  utility.hpp  valarray.hpp  variant.hpp  vector.hpp
lib/cereal/include/cereal/types/concepts/: pair_associative_container.hpp
lib/fmt/include/: format
lib/freetype2/: CMakeLists.txt
lib/freetype2/include/freetype/config/: ftoption.h
lib/freetype2/src/base/: ftoutln.c
lib/goom/: CMakeLists.txt  ChangeLog  README
lib/goom/include/goom/: colorutils.h  convolve_fx.h  draw_methods.h  drawmethods.h  filter_buffers.h  filter_control.h  filters.h  flying_stars_fx.h  gfontlib.h  gfontrle.h  goom_config.h  goom_config_param.h  goom_control.h  goom_core.h  goom_dots.h  goom_dots_fx.h  goom_draw.h  goom_fx.h  goom_graphic.h  goom_plugin_info.h  goom_testing.h  goom_visual_fx.h  ifs.h  ifs_dancers_fx.h  ifs_fx.h  image_displacement.h  image_fx.h  lines.h  lines_fx.h  sound_info.h  sound_tester.h  tentacle3d.h  tentacle_driver.h  tentacles.h  tentacles_driver.h  tentacles_fx.h  tentacles_new.h  text_draw.h  v2d.h  v3d.h
lib/goom/src/: all_maps.cpp  colormap.cpp  colormap.h  colorutils.cpp  colorutils.h  config_param.c  config_param.cpp  convolve_fx.c  convolve_fx.cpp  draw_methods.cpp  drawmethods.c  drawmethods.cpp  drawmethods.h  filter_buffers.cpp  filter_control.cpp  filters.c  filters.cpp  filters.h  flying_stars_fx.c  flying_stars_fx.cpp  gfontlib.cpp  gfontlib.h  gfontrle.cpp  gfontrle.h  goom.h  goom_config.h  goom_config_param.cpp  goom_config_param.h  goom_control.cpp  goom_core.c  goom_core.cpp  goom_core.h  goom_dots.cpp  goom_dots_fx.cpp  goom_draw.cpp  goom_fx.h  goom_graphic.h  goom_hash.cpp  goom_hash.h  goom_logging.c  (+45 more)
lib/goom/src/colordata/: BrBG.h  Dark2.h  Greys.h  Oranges.h  PRGn.h  Pastel1.h  PuBu.h  PuOr.h  PuRd.h  Purples.h  YlOrBr.h  YlOrRd.h  autumn.h  binary.h  bone.h  brg.h  coolwarm.h  copper.h  cubehelix.h  flag.h  gist_earth.h  gist_stern.h  gnuplot.h  gnuplot2.h  hot.h  inferno.h  jet.h  magma.h  nipy_spectral.h  ocean.h  pink_black_green_w3c_.h  prism.h  summer.h  tab10.h  tab20.h  tab20b.h  terrain.h  twilight.h  twilight_shifted.h  viridis.h  (+2 more)
lib/goom/src/stats/: filter_stats.cpp  filter_stats.h  goom_stats.cpp  goom_stats.h  ifs_stats.cpp  ifs_stats.h  sound_stats.cpp  sound_stats.h  stars_stats.cpp  stars_stats.h  tentacles_stats.cpp  tentacles_stats.h
lib/goomtests/: CMakeLists.txt
lib/goomtests/src/: test_colorutils.cpp  test_goomrand.cpp  test_main.cpp  test_parallel_utils.cpp  test_save_restore.cpp  test_strutils.cpp
lib/goomutils/: CMakeLists.txt
lib/goomutils/include/goomutils/: SimplexNoise.h  all_maps.h  bitmaps.h  colormap.h  colormap_enums.h  colormaps.h  colorutils.h  goomrand.h  image_bitmaps.h  logging.h  logging_control.h  math_utils.h  mathtools.h  mathutils.h  parallel_utils.h  random_colormaps.h  random_colormaps_manager.h  small_image_bitmaps.h  splitmix.hpp  strutils.h  thread_pool.h  thread_pool_macros.h  xoshiro.hpp
lib/goomutils/include/goomutils/colordata/: Accent.h  Blues.h  BrBG.h  BuGn.h  BuPu.h  CMRmap.h  Dark2.h  GnBu.h  Greens.h  Greys.h  OrRd.h  Oranges.h  PRGn.h  Paired.h  Pastel1.h  Pastel2.h  PiYG.h  PuBu.h  PuBuGn.h  PuOr.h  PuRd.h  Purples.h  RdBu.h  RdGy.h  RdPu.h  RdYlBu.h  RdYlGn.h  Reds.h  Set1.h  Set2.h  Set3.h  Spectral.h  Wistia.h  YlGn.h  YlGnBu.h  YlOrBr.h  YlOrRd.h  afmhot.h  all_maps.h  autumn.h  (+52 more)
lib/goomutils/src/: SimplexNoise.cpp  all_maps.cpp  bitmaps.cpp  colormap.cpp  colormaps.cpp  colorutils.cpp  goomrand.cpp  image_bitmaps.cpp  logging.cpp  math_utils.cpp  mathtools.c  mathutils.cpp  random_colormaps.cpp  random_colormaps_manager.cpp  small_image_bitmaps.cpp  strutils.cpp  thread_pool.cpp
lib/json/include/nlohmann/: json_fwd.hpp
lib/vivid/: CMakeLists.txt
lib/vivid/include/vivid/: colormap.h
lib/vivid/src/: index.cpp  rgb8.cpp  srgb.cpp
lib/vivid/tests/: CMakeLists.txt
src/: AudioData.h  CircularBuffer.h  Main.cpp  Main.h  buffer_savers.hpp  tsqueue.hpp  workers.cpp  workers.hpp
testing/: .clang-format  CMakeLists.txt  Makefile  goom.dict  make-kodi.sh
testing/apps/: CMakeLists.txt  goom_tester.cpp  goom_tester.h  main_append_test.hpp  run-kodi.sh  run_show_goom_output.sh  show_goom_output.cpp  stb_image.h  test_goom.cpp
testing/libs/: CMakeLists.txt
testing/libs/goom/: CMakeLists.txt  src
testing/libs/goom/include/: goom
testing/libs/utils/: CMakeLists.txt  CommandLineOptions.cpp  goom_loggers.cpp  load_save_settings.cpp  sstream_convert.hpp  test_common.cpp  test_utils.cpp
testing/libs/utils/include/fmt/: format-inl.h  format.h
testing/libs/utils/include/utils/: CommandLineOptions.hpp  audio_data_buffer.hpp  buffer_savers.hpp  goom_loggers.hpp  load_save_settings.hpp  statistics.hpp  test_common.hpp  test_utils.hpp  version.h
testing/tests/: CMakeLists.txt  test_convert.cpp  test_date.cpp  test_fmt.cpp  test_getopt.cpp  test_goom_logging.cpp  test_settings.conf  test_settings.cpp  test_sscanf.c
